--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     </style>
 </head>
 <body>
-    <h1>Календарь на 2025 год</h1>
+    <h1>Календарь вождения Пырушкиной Кристины Александровны</h1>
 
     <div class="calendar-container" id="calendarContainer"></div>
 
